Fix spacing in section

--- a/index.css
+++ b/index.css
@@ -1,9 +1,8 @@
-body {
-   font-family: "Roboto", sans-serif;
-   font-size: 1rem;
-   font-weight: 500;
-   color: #2b283a;
-   margin: 0;
+body{
+    font-size: 16px;
+    color: #2b283a;
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
 }
 
 header{
@@ -12,20 +11,24 @@ header{
 }
 
 h1{
-    margin: 0;
     color: whitesmoke;
-    font-size: 2.25rem;
+    font-size: 36px;
+    margin: 0;
+}
+
+h2{
+    margin-top: 0;
 }
 
 h3{
-    margin: 0;
-    font-size: 1.25rem;
     color: #d0aaff;
+    font-size: 20px;
+    margin:0;
 }
 
 section{
     padding: 45px 0;
 }
-.purple-sneakers{
+.main-image{
     width: 100%;
 }
